# CowMe

./: CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
CowMe/: CMakeLists.txt  CowMe.cpp  CowMe.h
src/: main.cpp
src/application/: CMakeLists.txt
src/application/dto/: QuestionDto.hpp  QuizDto.hpp  QuizResultDto.hpp
src/application/services/: IQuizService.hpp
src/application/strategies/: AnswerStrategyFactory.hpp  CodeOutputMatchStrategy.hpp  ComboSelectionStrategy.hpp  IAnswerStrategy.hpp  TextInputStrategy.hpp
src/application/usecases/: CreateQuizUseCase.cpp  CreateQuizUseCase.hpp  DeleteQuizUseCase.hpp  GetAllQuizzesUseCase.cpp  GetAllQuizzesUseCase.hpp  GetLeaderboardUseCase.hpp  SaveScoreUseCase.hpp  StartQuizUseCase.cpp  StartQuizUseCase.hpp  SubmitAnswerUseCase.cpp  SubmitAnswerUseCase.hpp  UpdateQuizUseCase.hpp
src/core/: CMakeLists.txt
src/core/entities/: HallOfFameEntry.hpp  Question.hpp  Quiz.hpp  QuizResult.hpp
src/core/enums/: AnswerStrategy.hpp  Difficulty.hpp
src/core/interfaces/: IHallOfFameRepository.hpp  IQuestionRepository.hpp  IQuizRepository.hpp
src/core/value_objects/: QuestionId.hpp  QuizId.hpp
src/infrastructure/: CMakeLists.txt  InfrastructureInit.cpp  InfrastructureInit.hpp
src/infrastructure/database/: DatabaseManager.hpp  DatabaseSeeder.hpp
src/infrastructure/repositories/: SqliteHallOfFameRepository.hpp  SqliteQuestionRepository.hpp  SqliteQuizRepository.hpp
src/presentation/: CMakeLists.txt
src/presentation/qml/: CreateQuizPage.qml  HallOfFamePage.qml  Main.qml  QuizListPage.qml  QuizSessionPage.qml  WelcomePage.qml
src/presentation/viewmodels/: CreateQuizViewModel.cpp  CreateQuizViewModel.hpp  HallOfFameViewModel.hpp  QuizListViewModel.cpp  QuizListViewModel.hpp  QuizSessionViewModel.cpp  QuizSessionViewModel.hpp
